--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ readme = { file = "README.md", content-type = "text/markdown" }
 authors = [
     { name = "Johan Edstedt", email = "johan.edstedt@liu.se" },
 ]
-requires-python = ">=3.10"
+requires-python = ">=3.9"
 dependencies = [
     "torch==2.5.1",
+    "numpy",
 ]
 [build-system]
 requires = [
