--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,7 @@ name: Build manylinx wheels and deploy
 
 permissions:
   contents: write
+  id-token: write
 
 on:
   push:
@@ -199,3 +200,28 @@ jobs:
         with:
           files: |
             ./dist/${{env.wheel_name}}
+
+  publish_pypi:
+    name: Publish to PyPI (Trusted Publishing)
+    needs: build_wheels
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+    steps:
+      - name: Download all built wheel artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: dist
+          pattern: '*'
+          merge-multiple: true
+
+      - name: List downloaded files
+        run: ls -l dist
+
+      - name: Publish to PyPI via OIDC
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: dist
+          skip-existing: true
