--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 
 requires-python = ">=3.9"
 dependencies = [
-    "torch==2.5.1",
+    "torch>=2.7.1",
     "numpy",
 ]
 [build-system]
