--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "fused-local-corr"
-version = "0.2.2"
+version = "0.2.3"
 description = "Fused Local Correlation in PyTorch"
 readme = { file = "README.md", content-type = "text/markdown" }
 license = { file = "LICENSE" }
@@ -10,7 +10,7 @@ authors = [
 
 requires-python = ">=3.9"
 dependencies = [
-    "torch>=2.7.1",
+    "torch",
     "numpy",
 ]
 [build-system]
