--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,16 +101,16 @@ jobs:
             cibw-build-cuda-compat-version: "12-6"
 
     steps:
-      # - name: Free Disk Space (Ubuntu)
-      #   uses: jlumbroso/free-disk-space@main
-      #   with:
-      #     tool-cache: false
-      #     android: true
-      #     dotnet: true
-      #     haskell: true
-      #     large-packages: true
-      #     docker-images: true
-      #     swap-storage: true
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: false
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: true
     
       - name: Checkout fused-local-corr
         uses: actions/checkout@v4
