--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,43 +63,88 @@ jobs:
           #   cibw-build-cuda-version: "12.4"
           #   cibw-build-torch-cuda-version: "124"
           #   cibw-build-cuda-compat-version: "12-4"
-          - torch-version: "2.7.1"
-            python-version: "3.9"
-            cuda-version: "12.6.0"
-            arch: "6.0;6.1;6.2;7.0;7.5;8.0;8.6;9.0+PTX"
-            cibw-build: "cp39-*64"
-            cibw-build-image: "pytorch/manylinux2_28-builder:cuda12.6"
-            cibw-build-cuda-version: "12.6"
-            cibw-build-torch-cuda-version: "126"
-            cibw-build-cuda-compat-version: "12-6"
-          - torch-version: "2.7.1"
+          # - torch-version: "2.7.1"
+          #   python-version: "3.9"
+          #   cuda-version: "12.6.0"
+          #   arch: "6.0;6.1;6.2;7.0;7.5;8.0;8.6;9.0+PTX"
+          #   cibw-build: "cp39-*64"
+          #   cibw-build-image: "pytorch/manylinux2_28-builder:cuda12.6"
+          #   cibw-build-cuda-version: "12.6"
+          #   cibw-build-torch-cuda-version: "126"
+          #   cibw-build-cuda-compat-version: "12-6"
+          # - torch-version: "2.7.1"
+          #   python-version: "3.10"
+          #   cuda-version: "12.6.0"
+          #   arch: "6.0;6.1;6.2;7.0;7.5;8.0;8.6;9.0+PTX"
+          #   cibw-build: "cp310-*64"
+          #   cibw-build-image: "pytorch/manylinux2_28-builder:cuda12.6"
+          #   cibw-build-cuda-version: "12.6"
+          #   cibw-build-torch-cuda-version: "126"
+          #   cibw-build-cuda-compat-version: "12-6"
+          # - torch-version: "2.7.1"
+          #   python-version: "3.11"
+          #   cuda-version: "12.6.0"
+          #   arch: "6.0;6.1;6.2;7.0;7.5;8.0;8.6;9.0+PTX"
+          #   cibw-build: "cp311-*64"
+          #   cibw-build-image: "pytorch/manylinux2_28-builder:cuda12.6"
+          #   cibw-build-cuda-version: "12.6"
+          #   cibw-build-torch-cuda-version: "126"
+          #   cibw-build-cuda-compat-version: "12-6"
+          # - torch-version: "2.7.1"
+          #   python-version: "3.12"
+          #   cuda-version: "12.6.0"
+          #   arch: "6.0;6.1;6.2;7.0;7.5;8.0;8.6;9.0+PTX"
+          #   cibw-build: "cp312-*64"
+          #   cibw-build-image: "pytorch/manylinux2_28-builder:cuda12.6"
+          #   cibw-build-cuda-version: "12.6"
+          #   cibw-build-torch-cuda-version: "126"
+          #   cibw-build-cuda-compat-version: "12-6"
+
+          # - torch-version: "2.9.0"
+          #   python-version: "3.9"
+          #   cuda-version: "12.8.0"
+          #   arch: "6.0;6.1;6.2;7.0;7.5;8.0;8.6;9.0+PTX"
+          #   cibw-build: "cp39-*64"
+          #   cibw-build-image: "pytorch/manylinux2_28-builder:cuda12.8"
+          #   cibw-build-cuda-version: "12.8"
+          #   cibw-build-torch-cuda-version: "128"
+          #   cibw-build-cuda-compat-version: "12-8"
+          - torch-version: "2.9.0"
             python-version: "3.10"
-            cuda-version: "12.6.0"
+            cuda-version: "12.8.0"
             arch: "6.0;6.1;6.2;7.0;7.5;8.0;8.6;9.0+PTX"
             cibw-build: "cp310-*64"
-            cibw-build-image: "pytorch/manylinux2_28-builder:cuda12.6"
-            cibw-build-cuda-version: "12.6"
-            cibw-build-torch-cuda-version: "126"
-            cibw-build-cuda-compat-version: "12-6"
-          - torch-version: "2.7.1"
+            cibw-build-image: "pytorch/manylinux2_28-builder:cuda12.8"
+            cibw-build-cuda-version: "12.8"
+            cibw-build-torch-cuda-version: "128"
+            cibw-build-cuda-compat-version: "12-8"
+          - torch-version: "2.9.0"
             python-version: "3.11"
-            cuda-version: "12.6.0"
+            cuda-version: "12.8.0"
             arch: "6.0;6.1;6.2;7.0;7.5;8.0;8.6;9.0+PTX"
             cibw-build: "cp311-*64"
-            cibw-build-image: "pytorch/manylinux2_28-builder:cuda12.6"
-            cibw-build-cuda-version: "12.6"
-            cibw-build-torch-cuda-version: "126"
-            cibw-build-cuda-compat-version: "12-6"
-          - torch-version: "2.7.1"
+            cibw-build-image: "pytorch/manylinux2_28-builder:cuda12.8"
+            cibw-build-cuda-version: "12.8"
+            cibw-build-torch-cuda-version: "128"
+            cibw-build-cuda-compat-version: "12-8"
+          - torch-version: "2.9.0"
             python-version: "3.12"
-            cuda-version: "12.6.0"
+            cuda-version: "12.8.0"
             arch: "6.0;6.1;6.2;7.0;7.5;8.0;8.6;9.0+PTX"
             cibw-build: "cp312-*64"
-            cibw-build-image: "pytorch/manylinux2_28-builder:cuda12.6"
-            cibw-build-cuda-version: "12.6"
-            cibw-build-torch-cuda-version: "126"
-            cibw-build-cuda-compat-version: "12-6"
-
+            cibw-build-image: "pytorch/manylinux2_28-builder:cuda12.8"
+            cibw-build-cuda-version: "12.8"
+            cibw-build-torch-cuda-version: "128"
+            cibw-build-cuda-compat-version: "12-8"
+          - torch-version: "2.9.0"
+            python-version: "3.13"
+            cuda-version: "12.8.0"
+            arch: "6.0;6.1;6.2;7.0;7.5;8.0;8.6;9.0+PTX"
+            cibw-build: "cp313-*64"
+            cibw-build-image: "pytorch/manylinux2_28-builder:cuda12.8"
+            cibw-build-cuda-version: "12.8"
+            cibw-build-torch-cuda-version: "128"
+            cibw-build-cuda-compat-version: "12-8"
     steps:
       - name: Free Disk Space (Ubuntu)
         uses: jlumbroso/free-disk-space@main
